--- a/Manual/pdfs/NeedyModules/Manual Air Traffic Control/Manual Air Traffic Control.html
+++ b/Manual/pdfs/NeedyModules/Manual Air Traffic Control/Manual Air Traffic Control.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
         <meta charset="utf-8">
-        <title>Air Traffic Manager — Keep Talking and Nobody Explodes Module</title>
+        <title>Air Traffic Manager - Keep Talking and Nobody Explodes Module</title>
         <meta name="viewport" content="initial-scale=1">
         <link rel="stylesheet" type="text/css" href="css/normalize.css">
         <link rel="stylesheet" type="text/css" href="css/main.css">
@@ -96,7 +96,7 @@
                             <li>Alternatively, if the plane's serial number's first letter is in the last fourth of the alphabet, select shuttle DG-780.</li>
                             <li>Alternatively, if the plane came in on lane 3 and it has more than 200 luggage, select GC-120.</li>
                             <li>Alternatively, if there is a plane present, departing from, or currently approaching all landing lanes, and the cumulative passenger count of their occupying planes is over 800, excluding wrecked lanes, select DO5-62.</li>
-                            <li>However, if the plane's origin is either Victoria, Mogadishu, or Abuja, ignore all rules above and select MQ3-17.</li>
+                            <li>However, if the plane's origin is either Victoria, Pretoria, or Pyongyang, ignore all rules above and select MQ3-17.</li>
                         </ul>
 
 
