Updated rules to have far smaller numbers.
Plane serials' pre-dash and post-dash values are balanced.
Number of passengers and luggage is smaller. 
Calculation for luggage is easier now.

--- a/Manual/pdfs/NeedyModules/Manual Air Traffic Control/Manual Air Traffic Control.html
+++ b/Manual/pdfs/NeedyModules/Manual Air Traffic Control/Manual Air Traffic Control.html
@@ -67,18 +67,18 @@
                         <p>Use the plane's serial number and city of origin to find the number of its designated hangar, using the table below.</p>
                         <table class="Serial-Origin-Crosstable">
                             <tr class="Serial-Origin-Labels"><th></th><th>Ashgabat</th><th>Cairo</th><th>Harare</th><th>Praia</th><th>Sofia</th><th>Wellington</th><th>Victoria</th><th>Lima</th><th>Pretoria</th><th>Riyadh</th><th>Dushanbe</th><th>Bishkek</th><th>Belmopan</th><th>Pyongyang</th><th>Palikir</th><th>Paramaribo</th>
-                            <tr><th>VK4-25</th><th>1</th><th>3</th><th>5</th><th>5</th><th>4</th><th>4</th><th>1</th><th>3</th><th>3</th><th>2</th><th>1</th><th>5</th><th>4</th><th>4</th><th>3</th><th>6</th></tr>
-                            <tr><th>SF-275</th><th>5</th><th>2</th><th>1</th><th>6</th><th>2</th><th>2</th><th>2</th><th>6</th><th>5</th><th>2</th><th>2</th><th>2</th><th>6</th><th>6</th><th>1</th><th>6</th></tr>
-                            <tr><th>QS-022</th><th>5</th><th>1</th><th>6</th><th>6</th><th>1</th><th>1</th><th>5</th><th>3</th><th>2</th><th>5</th><th>1</th><th>1</th><th>3</th><th>1</th><th>6</th><th>3</th></tr>
-                            <tr><th>MC2-25</th><th>3</th><th>5</th><th>3</th><th>4</th><th>5</th><th>5</th><th>1</th><th>1</th><th>4</th><th>5</th><th>5</th><th>4</th><th>3</th><th>6</th><th>4</th><th>6</th></tr>
-                            <tr><th>NS-085</th><th>1</th><th>2</th><th>4</th><th>4</th><th>1</th><th>2</th><th>6</th><th>2</th><th>6</th><th>3</th><th>4</th><th>4</th><th>4</th><th>4</th><th>6</th><th>4</th></tr>
-                            <tr><th>FR-030</th><th>5</th><th>4</th><th>3</th><th>2</th><th>3</th><th>1</th><th>2</th><th>5</th><th>1</th><th>4</th><th>3</th><th>4</th><th>6</th><th>3</th><th>3</th><th>6</th></tr>
-                            <tr><th>PB7-86</th><th>5</th><th>5</th><th>4</th><th>5</th><th>4</th><th>3</th><th>4</th><th>5</th><th>6</th><th>6</th><th>2</th><th>3</th><th>2</th><th>6</th><th>6</th><th>6</th></tr>
-                            <tr><th>QA4-31</th><th>4</th><th>1</th><th>2</th><th>6</th><th>1</th><th>1</th><th>4</th><th>2</th><th>4</th><th>5</th><th>6</th><th>3</th><th>5</th><th>4</th><th>5</th><th>2</th></tr>
-                            <tr><th>FD-866</th><th>3</th><th>4</th><th>3</th><th>1</th><th>2</th><th>6</th><th>5</th><th>5</th><th>6</th><th>2</th><th>1</th><th>4</th><th>1</th><th>2</th><th>2</th><th>6</th></tr>
-                            <tr><th>PE-801</th><th>1</th><th>4</th><th>4</th><th>4</th><th>5</th><th>6</th><th>1</th><th>4</th><th>3</th><th>6</th><th>3</th><th>4</th><th>2</th><th>4</th><th>1</th><th>1</th></tr>
-                            <tr><th>AQ-120</th><th>1</th><th>6</th><th>3</th><th>5</th><th>5</th><th>5</th><th>5</th><th>5</th><th>1</th><th>4</th><th>2</th><th>3</th><th>3</th><th>4</th><th>1</th><th>1</th></tr>
-                            <tr><th>YQ5-51</th><th>3</th><th>6</th><th>6</th><th>2</th><th>2</th><th>1</th><th>2</th><th>2</th><th>4</th><th>3</th><th>4</th><th>3</th><th>2</th><th>1</th><th>1</th><th>1</th></tr>
+                            <tr><th>7K4-G5</th><th>1</th><th>3</th><th>5</th><th>5</th><th>4</th><th>4</th><th>1</th><th>3</th><th>3</th><th>2</th><th>1</th><th>5</th><th>4</th><th>4</th><th>3</th><th>6</th></tr>
+                            <tr><th>6F-2V5</th><th>5</th><th>2</th><th>1</th><th>6</th><th>2</th><th>2</th><th>2</th><th>6</th><th>5</th><th>2</th><th>2</th><th>2</th><th>6</th><th>6</th><th>1</th><th>6</th></tr>
+                            <tr><th>6S-0H2</th><th>5</th><th>1</th><th>6</th><th>6</th><th>1</th><th>1</th><th>5</th><th>3</th><th>2</th><th>5</th><th>1</th><th>1</th><th>3</th><th>1</th><th>6</th><th>3</th></tr>
+                            <tr><th>4C2-G5</th><th>3</th><th>5</th><th>3</th><th>4</th><th>5</th><th>5</th><th>1</th><th>1</th><th>4</th><th>5</th><th>5</th><th>4</th><th>3</th><th>6</th><th>4</th><th>6</th></tr>
+                            <tr><th>4S-0X5</th><th>1</th><th>2</th><th>4</th><th>4</th><th>1</th><th>2</th><th>6</th><th>2</th><th>6</th><th>3</th><th>4</th><th>4</th><th>4</th><th>4</th><th>6</th><th>4</th></tr>
+                            <tr><th>2R-0K0</th><th>5</th><th>4</th><th>3</th><th>2</th><th>3</th><th>1</th><th>2</th><th>5</th><th>1</th><th>4</th><th>3</th><th>4</th><th>6</th><th>3</th><th>3</th><th>6</th></tr>
+                            <tr><th>5B7-Y6</th><th>5</th><th>5</th><th>4</th><th>5</th><th>4</th><th>3</th><th>4</th><th>5</th><th>6</th><th>6</th><th>2</th><th>3</th><th>2</th><th>6</th><th>6</th><th>6</th></tr>
+                            <tr><th>5A4-L1</th><th>4</th><th>1</th><th>2</th><th>6</th><th>1</th><th>1</th><th>4</th><th>2</th><th>4</th><th>5</th><th>6</th><th>3</th><th>5</th><th>4</th><th>5</th><th>2</th></tr>
+                            <tr><th>2D-8R6</th><th>3</th><th>4</th><th>3</th><th>1</th><th>2</th><th>6</th><th>5</th><th>5</th><th>6</th><th>2</th><th>1</th><th>4</th><th>1</th><th>2</th><th>2</th><th>6</th></tr>
+                            <tr><th>5E-8B1</th><th>1</th><th>4</th><th>4</th><th>4</th><th>5</th><th>6</th><th>1</th><th>4</th><th>3</th><th>6</th><th>3</th><th>4</th><th>2</th><th>4</th><th>1</th><th>1</th></tr>
+                            <tr><th>0Q-1G0</th><th>1</th><th>6</th><th>3</th><th>5</th><th>5</th><th>5</th><th>5</th><th>5</th><th>1</th><th>4</th><th>2</th><th>3</th><th>3</th><th>4</th><th>1</th><th>1</th></tr>
+                            <tr><th>8Q5-P1</th><th>3</th><th>6</th><th>6</th><th>2</th><th>2</th><th>1</th><th>2</th><th>2</th><th>4</th><th>3</th><th>4</th><th>3</th><th>2</th><th>1</th><th>1</th><th>1</th></tr>
                         </table>
                     </div>
                     <div class="page-footer relative-footer">Page 1 of 2</div>
@@ -108,7 +108,7 @@
                             From the plane's serial number, select the pre-dash characters and translate these to numerical values (A = 1, B = 2, Z = 26), and sum these. 
                             Multiply this number by the plane's number of passengers. 
                             Execute the same method for the serial's post-dash characters, however, instead multiply these with the plane's amount of luggage.
-                            Finally, perform an XOR-operation with the sum of these two numbers and the entire serial number (translated similarly as the pre- and post-dash parts of it).
+                            Finally, perform an XOR-operation with the difference between these two numbers (ignoring its sign) and the value of the pre- and postdash values multiplied with each other.   
                             By subtracting the number of different luggage carts from this number, until it is smaller than that number, the final result is unveiled. 
                             Add one to this number and you will have found the index of the plane's correct luggage cart. 
                             Use the table below to determine that cart's serial.
