fixed in test amounts.

--- a/Manual/pdfs/NeedyModules/Manual Air Traffic Control/Manual Air Traffic Control.html
+++ b/Manual/pdfs/NeedyModules/Manual Air Traffic Control/Manual Air Traffic Control.html
@@ -37,7 +37,7 @@
         
         .Luggage-Table {
             position:relative;
-            float:center;
+            margin:auto;
             border:0;
         }
 
@@ -101,8 +101,8 @@
                             <li>Alternatively, if the plane's passenger and luggage count are both even, select shuttle GC-120.</li>
                             <li>Alternatively, if the origin's name consists of multiple words, or the plane has more luggage than passengers, select shuttle LF-705.</li>
                             <li>Alternatively, if the plane's serial number's first letter is in the last fourth of the alphabet, select shuttle DG-780.</li>
-                            <li>Alternatively, if the plane came in on lane 3 and it has more than 200 luggage, select GC-120.</li>
-                            <li>Alternatively, if there is a plane present, departing from, or currently approaching all landing lanes, and the cumulative passenger count of their occupying planes is over 800, excluding wrecked lanes, select DO5-62.</li>
+                            <li>Alternatively, if the plane came in on lane 3 and it has more than 20 luggage, select GC-120.</li>
+                            <li>Alternatively, if there is a plane present, departing from, or currently approaching all landing lanes, and the cumulative passenger count of their occupying planes is over 80, excluding wrecked lanes, select DO5-62.</li>
                             <li>However, if the plane's origin is either Victoria, Pretoria, or Pyongyang, ignore all rules above and select MQ3-17.</li>
                         </ul>
 
